--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ main, develop ]
     paths:
-      - 'backend/**'
+      - '/**'
   pull_request:
     branches: [ main ]
     paths:
-      - 'backend/**'
+      - '/**'
 
 env:
   NODE_VERSION: '18'
@@ -23,7 +23,7 @@ jobs:
     
     defaults:
       run:
-        working-directory: ./backend
+        working-directory: ./
 
     steps:
       - name: 📥 Checkout code
@@ -34,7 +34,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          cache-dependency-path: './backend/package-lock.json'
+          cache-dependency-path: './package-lock.json'
 
       - name: 🔍 Install dependencies
         run: npm ci
@@ -72,7 +72,7 @@ jobs:
     
     defaults:
       run:
-        working-directory: ./backend
+        working-directory: ./
 
     steps:
       - name: 📥 Checkout code
