--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,40 +3,30 @@ name: Deploy to AWS EC2
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    
+
     steps:
     - uses: actions/checkout@v3
-    
+
     - name: Deploy to EC2
-      uses: appleboy/ssh-action@v0.1.7
+      uses: appleboy/ssh-action@v0.1.10
       with:
         host: ${{ secrets.EC2_PRODUCTION_HOST }}
         username: deploy
         key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
         script: |
           cd /var/www/backend
-          
-          # Pull latest code
-          git pull origin main
-          
-          # Install dependencies
+          git fetch origin main
+          git reset --hard origin/main
           npm ci --production
           
-          # Create/update environment file
           echo "NODE_ENV=${{ secrets.NODE_ENV }}" > .env
           echo "PORT=${{ secrets.PORT }}" >> .env
           echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> .env
           echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
           
-          # Restart application with PM2
           pm2 restart backend || pm2 start npm --name "backend" -- start
-          
-          # Save PM2 configuration
           pm2 save
