--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,19 +12,21 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
-    
+      with:
+        fetch-depth: 0
+
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
         node-version: '18'
         cache: 'npm'
-    
+
     - name: Install dependencies
       run: npm ci
-    
+
     - name: Run tests
       run: npm test
-    
+
     - name: Run linting
       run: npm run lint
 
@@ -35,7 +37,7 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
-    
+
     - name: Deploy to EC2
       uses: appleboy/ssh-action@v0.1.7
       with:
@@ -43,23 +45,29 @@ jobs:
         username: deploy
         key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
         script: |
+          set -e
           cd /var/www/backend
-          
+
           # Pull latest code
           git pull origin main
-          
+
           # Install dependencies
-          npm ci --production
-          
+          NODE_ENV=production npm ci
+
           # Create/update environment file
           echo "NODE_ENV=${{ secrets.NODE_ENV }}" > .env
           echo "PORT=${{ secrets.PORT }}" >> .env
           echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> .env
           echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
-          
+
+          # Ensure PM2 is installed
+          if ! command -v pm2 &> /dev/null; then
+            npm install -g pm2
+          fi
+
           # Restart application with PM2
           pm2 restart backend || pm2 start npm --name "backend" -- start
-          
+
           # Save PM2 configuration
           pm2 save
 
